2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix invalid memory access bug.

2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/z80/gen.c:
	  Fix handling of ADDRESS_OF in lospre forward assignment.

2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3530276.

2012-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c (bitVectSetBit, bitVectUnSetBit),
	* src/hc08/ralloc2.cc (set_surviving_regs),
	* src/z80/ralloc2.cc (set_surviving_regs): Prohibit negative bit
	  position in bit vectors to avoid memory corruption
	* device/lib/clean.mk: add s08 and r3ka ports to cleaning

2012-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use Rabbit's cast to bool instruction for zeroing h,
	  more efficient loading of pairs in shifts.
	* src/z80/peep.c:
	  Handle bool in instruction size calculations.

2012-05-28 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: allow underscore characters in #pragma config

2012-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Improve handling of results of substituted instructions in lospre.

2012-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Fix handling of --max-allocs-per-node in lospre.

2012-05-26 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: allow space characters in #pragma config

2012-05-25 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: corrected #pragma configure to #pragma config

2012-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Improve handling of --max-allocs-per-node in lospre.

2012-05-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genPointerSet): fixed warning
