@@ -1999,6 +1999,12 @@ aopForRemat (symbol * sym)
   int ptr_type = 0;
   int val = 0;
 
+  if (!ic)
+    {
+      fprintf (stderr, "Symbol %s to be rematerialized, but has no rematiCode.\n", sym->name);
+      wassert (0);
+    }
+
   for (;;)
     {
       if (ic->op == '+')
@@ -3253,8 +3259,8 @@ genSend (set *sendSet)
       if (send1->argreg > send2->argreg)
         {
           iCode * sic = send1;
-          send2 = send1;
-          send1 = sic;
+          send1 = send2;
+          send2 = sic;
         }
       aopOp (IC_LEFT (send1), send1, FALSE);
       aopOp (IC_LEFT (send2), send2, FALSE);
