@@ -1,5 +1,17 @@
 2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/gen.c,
+	  src/hc08/gen.c:
+	  Added assertions to debug rematerialization issues.
+
+2012-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/ralloc.c (moveSendToCall, packRegisters): move SEND iCodes
+	  to immediately precede their CALL/PCALL for better live range info.
+	* src/hc08/gen.c (genSend): fixed bug swapping SEND iCode order.
+
+2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCClospre.hpp:
 	  Fix invalid memory access bug.
 
